hphp/hack/test/typecheck/typing_fail_abstract.php.exp
File "typing_fail_abstract.php", line 15, characters 3-11:
Parsing[1002] Parse error. You are missing public, private or protected.
